# communication-protocols-system-engineering-series

./: LICENSE  README.md
Day-29-AI-Agents-Explained/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  interview-questions.md  pyproject.toml
Day-29-AI-Agents-Explained/Exercise-01-MCP-Server-Bootstrap/: README.md  run.sh
Day-29-AI-Agents-Explained/Exercise-02-Tool-Registry-And-Discovery/: README.md  run.sh
Day-29-AI-Agents-Explained/Exercise-03-Stdio-Client-Server-Integration/: README.md  run.sh
Day-29-AI-Agents-Explained/Exercise-04-FastAPI-Operational-Endpoints/: README.md  run.sh
Day-29-AI-Agents-Explained/Exercise-05-PostgreSQL-Query-Tool/: README.md  run.sh
Day-29-AI-Agents-Explained/Exercise-06-Telecom-Observability-Tools/: README.md  run.sh
Day-29-AI-Agents-Explained/Exercise-07-Deterministic-Testing-And-Validation/: README.md  run.sh
Day-29-AI-Agents-Explained/Exercise-08-Dockerized-Platform-Operations/: README.md  run.sh
Day-29-AI-Agents-Explained/data/samples/: platform_data.json
Day-29-AI-Agents-Explained/diagrams/: api-request-lifecycle.md  architecture-overview.md  deployment-topology.md  error-handling-flow.md  mcp-stdio-sequence.md  observability-logging-pipeline.md  tool-orchestration-flow.md
Day-29-AI-Agents-Explained/scripts/: README.md  run_all_tests.sh
Day-29-AI-Agents-Explained/src/: main.py
Day-29-AI-Agents-Explained/src/agent/: orchestrator.py
Day-29-AI-Agents-Explained/src/api/: dependencies.py  exception_handlers.py  routes.py
Day-29-AI-Agents-Explained/tests/: conftest.py
(+1610 files in other folders)
